Add filter for news entries by site when clicking on the icon
- Updated Vaadin
- Refactorings